--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -117,9 +117,11 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
     <Content Include="OIL\M00001MENU.aspx" />
     <Content Include="OIL\css\ex\nprogress.css" />
     <Content Include="OIL\ex\page_404.html" />
+    <Content Include="OIL\OIM0004StationSearch.aspx" />
     <Content Include="script\calendar.js" />
     <Content Include="script\common.js" />
     <Content Include="script\event.js" />
@@ -203,6 +205,13 @@
     <Compile Include="base\PrevDispMap.vb" />
     <Compile Include="base\SessionKey.vb" />
     <Compile Include="base\YDF.vb" />
+    <Compile Include="OIL\inc\OIM0004WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0004WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0004WRKINC.ascx.vb">
+      <DependentUpon>OIM0004WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\OILMasterPage.Master.designer.vb">
       <DependentUpon>OILMasterPage.Master</DependentUpon>
     </Compile>
@@ -284,6 +293,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="OIL\OIM0004StationSearch.aspx.designer.vb">
+      <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\OIM0004StationSearch.aspx.vb">
+      <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
