--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -96,8 +96,11 @@
   <ItemGroup>
     <Content Include="bin\JOTWEB.dll" />
     <Content Include="bin\JOTWEB.pdb" />
+    <Content Include="OIL\css\OIM0005C.css" />
     <Content Include="OIL\css\OIM0004C.css" />
+    <Content Include="OIL\css\OIM0005L.css" />
     <Content Include="OIL\css\OIM0004L.css" />
+    <Content Include="OIL\css\OIM0005S.css" />
     <Content Include="OIL\css\OIM0004S.css" />
     <Content Include="OIL\img\404cat.png" />
     <Content Include="OIL\css\ex\bootstrap.min.css" />
@@ -120,6 +123,7 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIM0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
     <Content Include="OIL\M00001MENU.aspx" />
     <Content Include="OIL\css\ex\nprogress.css" />
@@ -127,8 +131,11 @@
     <Content Include="OIL\OIM0004StationCreate.aspx" />
     <Content Include="OIL\OIM0004StationList.aspx" />
     <Content Include="OIL\OIM0004StationSearch.aspx" />
+    <Content Include="OIL\script\OIM0005C.js" />
     <Content Include="OIL\script\OIM0004C.js" />
+    <Content Include="OIL\script\OIM0005L.js" />
     <Content Include="OIL\script\OIM0004L.js" />
+    <Content Include="OIL\script\OIM0005S.js" />
     <Content Include="OIL\script\OIM0004S.js" />
     <Content Include="script\calendar.js" />
     <Content Include="script\common.js" />
@@ -213,6 +220,13 @@
     <Compile Include="base\PrevDispMap.vb" />
     <Compile Include="base\SessionKey.vb" />
     <Compile Include="base\YDF.vb" />
+    <Compile Include="OIL\inc\OIM0005WRKINC.ascx.designer.vb">
+      <DependentUpon>OIM0005WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIM0005WRKINC.ascx.vb">
+      <DependentUpon>OIM0005WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\inc\OIM0004WRKINC.ascx.designer.vb">
       <DependentUpon>OIM0004WRKINC.ascx</DependentUpon>
     </Compile>
