--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -14,6 +14,7 @@
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="On">
       <error statusCode="403" redirect="~/OIL/ex/page_404.html" />
       <error statusCode="404" redirect="~/OIL/ex/page_404.html" />
+      <error statusCode="510" redirect="~/OIL/ex/page_404.html" />
     </customErrors>
   </system.web>
   <system.webServer>
