--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -187,6 +187,9 @@
     <Compile Include="base\PrevDispMap.vb" />
     <Compile Include="base\SessionKey.vb" />
     <Compile Include="base\YDF.vb" />
+    <Compile Include="inc\GRCO0100XLSUP.ashx.vb">
+      <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
+    </Compile>
     <Compile Include="OIL\inc\OIM0005WRKINC.ascx.designer.vb">
       <DependentUpon>OIM0005WRKINC.ascx</DependentUpon>
     </Compile>
@@ -336,6 +339,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="OIL\OILMasterPage.Master" />
+    <Content Include="inc\GRCO0100XLSUP.ashx" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
