--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -121,6 +121,7 @@
     <Content Include="M00000LOGON.aspx" />
     <Content Include="OIL\inc\OIM0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
+    <Content Include="OIL\inc\OIT0001WRKINC.ascx" />
     <Content Include="OIL\M00001MENU.aspx" />
     <Content Include="OIL\css\ex\nprogress.css" />
     <Content Include="OIL\ex\page_404.html" />
@@ -130,6 +131,12 @@
     <Content Include="OIL\mas\OIM0004StationList.aspx" />
     <Content Include="OIL\mas\OIM0005TankSearch.aspx" />
     <Content Include="OIL\mas\OIM0004StationSearch.aspx" />
+    <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
+    <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
+    <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
+    <Content Include="OIL\script\OIT0001D.js" />
+    <Content Include="OIL\script\OIT0001L.js" />
+    <Content Include="OIL\script\OIT0001S.js" />
     <Content Include="OIL\script\OIM0005C.js" />
     <Content Include="OIL\script\OIM0004C.js" />
     <Content Include="OIL\script\OIM0005L.js" />
@@ -202,6 +209,13 @@
     </Compile>
     <Compile Include="OIL\inc\OIM0004WRKINC.ascx.vb">
       <DependentUpon>OIM0004WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0001WRKINC.ascx.designer.vb">
+      <DependentUpon>OIT0001WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0001WRKINC.ascx.vb">
+      <DependentUpon>OIT0001WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\OILMasterPage.Master.designer.vb">
@@ -328,6 +342,27 @@
       <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.designer.vb">
+      <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.vb">
+      <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx.designer.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyList.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx.designer.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyDetail.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -364,7 +399,6 @@
     <Folder Include="OIL\for\" />
     <Folder Include="OIL\inv\" />
     <Folder Include="OIL\loc\" />
-    <Folder Include="OIL\ord\" />
     <Folder Include="OIL\pay\" />
   </ItemGroup>
   <ItemGroup>
