--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -9,9 +9,10 @@
 	</appSettings>
   <system.web>
     <compilation strict="false" explicit="true" targetFramework="4.5" debug="true"/>
+<!--    <identity impersonate="true" userName="pcadmin2" password="pad2" /> -->
     <httpRuntime targetFramework="4.5" maxRequestLength="2097151"/>
     <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master" />
-    <customErrors defaultRedirect="M00000LOGON.aspx" mode="On">
+    <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
       <error statusCode="403" redirect="~/OIL/ex/page_404.html" />
       <error statusCode="404" redirect="~/OIL/ex/page_404.html" />
       <error statusCode="510" redirect="~/OIL/ex/page_404.html" />
