--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -163,6 +163,7 @@
     <Compile Include="base\CS\CS0009.vb" />
     <Compile Include="base\CS\CS0010.vb" />
     <Compile Include="base\CS\CS0011.vb" />
+    <Compile Include="base\CS\CS0013_TEST.vb" />
     <Compile Include="base\CS\CS0013.vb" />
     <Compile Include="base\CS\CS0015.vb" />
     <Compile Include="base\CS\CS0016.vb" />
