--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -93,6 +93,9 @@
     <Content Include="bin\JOTWEB.pdb" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\OIS0001C.css" />
+    <Content Include="OIL\css\OIS0001L.css" />
+    <Content Include="OIL\css\OIS0001S.css" />
     <Content Include="OIL\css\OIT0001D.css" />
     <Content Include="OIL\css\OIT0001L.css" />
     <Content Include="OIL\css\OIT0001S.css" />
@@ -122,6 +125,7 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIS0001WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0001WRKINC.ascx" />
@@ -137,6 +141,9 @@
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
+    <Content Include="OIL\script\OIMXXXXC.js" />
+    <Content Include="OIL\script\OIMXXXXL.js" />
+    <Content Include="OIL\script\OIMXXXXS.js" />
     <Content Include="OIL\script\OIT0001D.js" />
     <Content Include="OIL\script\OIT0001L.js" />
     <Content Include="OIL\script\OIT0001S.js" />
@@ -199,6 +206,13 @@
     <Compile Include="base\YDF.vb" />
     <Compile Include="inc\GRCO0100XLSUP.ashx.vb">
       <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIS0001WRKINC.ascx.designer.vb">
+      <DependentUpon>OIS0001WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIS0001WRKINC.ascx.vb">
+      <DependentUpon>OIS0001WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\inc\OIM0005WRKINC.ascx.designer.vb">
       <DependentUpon>OIM0005WRKINC.ascx</DependentUpon>
