--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -9,13 +9,14 @@
 	</appSettings>
   <system.web>
     <compilation strict="false" explicit="true" targetFramework="4.5" debug="true"/>
-    <!--<identity impersonate="true" userName="JOTNT\pcadmin2" password="pad2" />-->
+    <identity impersonate="true" userName="JOTNT\pcadmin2" password="pad2" />
     <httpRuntime targetFramework="4.5" maxRequestLength="2097151"/>
     <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master" />
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
       <error statusCode="403" redirect="~/OIL/ex/page_404.html" />
       <error statusCode="404" redirect="~/OIL/ex/page_404.html" />
       <error statusCode="510" redirect="~/OIL/ex/page_404.html" />
+      <error statusCode="500" redirect="~/OIL/ex/page_404.html" />
     </customErrors>
   </system.web>
   <system.webServer>
