20191120_COMMIT 左下段、CSS変更中

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -120,6 +120,7 @@
     <Content Include="img\矢印L.png" />
     <Content Include="img\矢印R.png" />
     <Content Include="OIL\img\foward.png" />
+    <Content Include="OIL\img\master.png" />
     <Content Include="OIL\img\oiltank.png" />
     <Content Include="OIL\img\order.png" />
     <Content Include="OIL\inc\GRM00001WRKINC.ascx" />
