--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -96,8 +96,11 @@
     <Content Include="OIL\css\OIS0001C.css" />
     <Content Include="OIL\css\OIS0001L.css" />
     <Content Include="OIL\css\OIS0001S.css" />
+    <Content Include="OIL\css\OIT0004D.css" />
     <Content Include="OIL\css\OIT0001D.css" />
+    <Content Include="OIL\css\OIT0004L.css" />
     <Content Include="OIL\css\OIT0001L.css" />
+    <Content Include="OIL\css\OIT0004S.css" />
     <Content Include="OIL\css\OIT0001S.css" />
     <Content Include="OIL\css\OIM0005C.css" />
     <Content Include="OIL\css\OIM0004C.css" />
@@ -129,6 +132,7 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIT0004WRKINC.ascx" />
     <Content Include="OIL\inc\OIS0001WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
@@ -145,13 +149,17 @@
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
     <Content Include="OIL\mas\OIS0001UserList.aspx" />
     <Content Include="OIL\mas\OIS0001UserSearch.aspx" />
+    <Content Include="OIL\ord\OIT0004LinkSearch.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
     <Content Include="OIL\script\OIS0001C.js" />
     <Content Include="OIL\script\OIS0001L.js" />
     <Content Include="OIL\script\OIS0001S.js" />
+    <Content Include="OIL\script\OIT0004D.js" />
     <Content Include="OIL\script\OIT0001D.js" />
+    <Content Include="OIL\script\OIT0004L.js" />
     <Content Include="OIL\script\OIT0001L.js" />
+    <Content Include="OIL\script\OIT0004S.js" />
     <Content Include="OIL\script\OIT0001S.js" />
     <Content Include="OIL\script\OIM0005C.js" />
     <Content Include="OIL\script\OIM0004C.js" />
@@ -214,6 +222,13 @@
     <Compile Include="base\YDF.vb" />
     <Compile Include="inc\GRCO0100XLSUP.ashx.vb">
       <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0004WRKINC.ascx.designer.vb">
+      <DependentUpon>OIT0004WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0004WRKINC.ascx.vb">
+      <DependentUpon>OIT0004WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\inc\OIS0001WRKINC.ascx.designer.vb">
       <DependentUpon>OIS0001WRKINC.ascx</DependentUpon>
@@ -387,6 +402,13 @@
     <Compile Include="OIL\mas\OIM0004StationSearch.aspx.vb">
       <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0004LinkSearch.aspx.designer.vb">
+      <DependentUpon>OIT0004LinkSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0004LinkSearch.aspx.vb">
+      <DependentUpon>OIT0004LinkSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx.designer.vb">
       <DependentUpon>OIT0001EmptyTurnDairyList.aspx</DependentUpon>
