--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -121,10 +121,14 @@
     <Content Include="img\最終頁.png" />
     <Content Include="img\矢印L.png" />
     <Content Include="img\矢印R.png" />
+    <Content Include="OIL\img\datalink.png" />
     <Content Include="OIL\img\foward.png" />
     <Content Include="OIL\img\master.png" />
     <Content Include="OIL\img\oiltank.png" />
     <Content Include="OIL\img\order.png" />
+    <Content Include="OIL\img\pay.png" />
+    <Content Include="OIL\img\statistics.png" />
+    <Content Include="OIL\img\tank.png" />
     <Content Include="OIL\inc\GRM00001WRKINC.ascx" />
     <Content Include="inc\GRIS0001Title.ascx" />
     <Content Include="inc\GRIS0002Footer.ascx" />
