--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -149,6 +149,7 @@
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
     <Content Include="OIL\mas\OIS0001UserList.aspx" />
     <Content Include="OIL\mas\OIS0001UserSearch.aspx" />
+    <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0002LinkSearch.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
@@ -402,6 +403,13 @@
     <Compile Include="OIL\mas\OIM0004StationSearch.aspx.vb">
       <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx.designer.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx.vb">
+      <DependentUpon>OIT0001EmptyTurnDairyDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0002LinkSearch.aspx.designer.vb">
       <DependentUpon>OIT0002LinkSearch.aspx</DependentUpon>
