--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -100,7 +100,6 @@
     <Content Include="OIL\css\OIT0001D.css" />
     <Content Include="OIL\css\OIT0002L.css" />
     <Content Include="OIL\css\OIT0001L.css" />
-    <Content Include="OIL\css\OIT0002S.css" />
     <Content Include="OIL\css\OIT0001S.css" />
     <Content Include="OIL\css\OIM0005C.css" />
     <Content Include="OIL\css\OIM0004C.css" />
@@ -108,6 +107,7 @@
     <Content Include="OIL\css\OIM0004L.css" />
     <Content Include="OIL\css\OIM0005S.css" />
     <Content Include="OIL\css\OIM0004S.css" />
+    <Content Include="OIL\css\OIT0002S.css" />
     <Content Include="OIL\img\404cat.png" />
     <Content Include="OIL\css\ex\bootstrap.min.css" />
     <Content Include="css\common.css" />
@@ -153,6 +153,7 @@
     <Content Include="OIL\mas\OIS0001UserCreate.aspx" />
     <Content Include="OIL\mas\OIS0001UserList.aspx" />
     <Content Include="OIL\mas\OIS0001UserSearch.aspx" />
+    <Content Include="OIL\ord\OIT0002LinkDetail.aspx" />
     <Content Include="OIL\ord\OIT0002LinkList.aspx" />
     <Content Include="OIL\ord\OIT0002LinkSearch.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
@@ -408,6 +409,13 @@
     <Compile Include="OIL\mas\OIM0004StationSearch.aspx.vb">
       <DependentUpon>OIM0004StationSearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkDetail.aspx.designer.vb">
+      <DependentUpon>OIT0002LinkDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0002LinkDetail.aspx.vb">
+      <DependentUpon>OIT0002LinkDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0002LinkList.aspx.designer.vb">
       <DependentUpon>OIT0002LinkList.aspx</DependentUpon>
