--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -121,8 +121,10 @@
     <Content Include="img\最終頁.png" />
     <Content Include="img\矢印L.png" />
     <Content Include="img\矢印R.png" />
+    <Content Include="OIL\img\calendar.png" />
     <Content Include="OIL\img\datalink.png" />
     <Content Include="OIL\img\foward.png" />
+    <Content Include="OIL\img\leftbox.png" />
     <Content Include="OIL\img\master.png" />
     <Content Include="OIL\img\oiltank.png" />
     <Content Include="OIL\img\order.png" />
