--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -162,6 +162,7 @@
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
+    <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\script\OIS0001C.js" />
     <Content Include="OIL\script\OIS0001L.js" />
     <Content Include="OIL\script\OIS0001S.js" />
@@ -456,6 +457,13 @@
     <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.vb">
       <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderSearch.aspx.designer.vb">
+      <DependentUpon>OIT0003OrderSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderSearch.aspx.vb">
+      <DependentUpon>OIT0003OrderSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
