--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -96,6 +96,7 @@
     <Content Include="OIL\css\OIS0001C.css" />
     <Content Include="OIL\css\OIS0001L.css" />
     <Content Include="OIL\css\OIS0001S.css" />
+    <Content Include="OIL\css\OIT0003L.css" />
     <Content Include="OIL\css\OIT0003S.css" />
     <Content Include="OIL\css\OIT0002D.css" />
     <Content Include="OIL\css\OIT0001D.css" />
@@ -162,6 +163,7 @@
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
+    <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\script\OIS0001C.js" />
     <Content Include="OIL\script\OIS0001L.js" />
@@ -456,6 +458,13 @@
     </Compile>
     <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.vb">
       <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderList.aspx.designer.vb">
+      <DependentUpon>OIT0003OrderList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderList.aspx.vb">
+      <DependentUpon>OIT0003OrderList.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0003OrderSearch.aspx.designer.vb">
