--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -96,6 +96,8 @@
     <Content Include="OIL\css\OIS0001C.css" />
     <Content Include="OIL\css\OIS0001L.css" />
     <Content Include="OIL\css\OIS0001S.css" />
+    <Content Include="OIL\css\OIT0003D.css" />
+    <Content Include="OIL\css\OIT0003Q.css" />
     <Content Include="OIL\css\OIT0003L.css" />
     <Content Include="OIL\css\OIT0003S.css" />
     <Content Include="OIL\css\OIT0002D.css" />
@@ -125,6 +127,7 @@
     <Content Include="img\矢印R.png" />
     <Content Include="OIL\img\calendar.png" />
     <Content Include="OIL\img\datalink.png" />
+    <Content Include="OIL\img\noicon.png" />
     <Content Include="OIL\img\foward.png" />
     <Content Include="OIL\img\leftbox.png" />
     <Content Include="OIL\img\master.png" />
@@ -164,11 +167,15 @@
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
+    <Content Include="OIL\ord\OIT0003OrderDetail.aspx" />
+    <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\script\OIS0001C.js" />
     <Content Include="OIL\script\OIS0001L.js" />
     <Content Include="OIL\script\OIS0001S.js" />
+    <Content Include="OIL\script\OIT0003D.js" />
+    <Content Include="OIL\script\OIT0003Q.js" />
     <Content Include="OIL\script\OIT0003L.js" />
     <Content Include="OIL\script\OIT0003S.js" />
     <Content Include="OIL\script\OIT0002D.js" />
@@ -219,6 +226,7 @@
     <Compile Include="base\CS\CS0047.vb" />
     <Compile Include="base\CS\CS0050.vb" />
     <Compile Include="base\CS\CS0051.vb" />
+    <Compile Include="base\CS\CS0052.vb" />
     <Compile Include="base\GL\GL0000.vb" />
     <Compile Include="base\GL\GL0001.vb" />
     <Compile Include="base\GL\GL0002.vb" />
@@ -466,6 +474,20 @@
     </Compile>
     <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.vb">
       <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderDetail.aspx.designer.vb">
+      <DependentUpon>OIT0003OrderDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderDetail.aspx.vb">
+      <DependentUpon>OIT0003OrderDetail.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderLinkQuota.aspx.designer.vb">
+      <DependentUpon>OIT0003OrderLinkQuota.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderLinkQuota.aspx.vb">
+      <DependentUpon>OIT0003OrderLinkQuota.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0003OrderList.aspx.designer.vb">
