--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -4,19 +4,19 @@
   http://go.microsoft.com/fwlink/?LinkId=169433 を参照してください
   -->
 <configuration>
-	<appSettings>
-		<add key="Environment" value="TEST"/>
-	</appSettings>
+  <appSettings>
+    <add key="Environment" value="TEST"/>
+  </appSettings>
   <system.web>
-    <compilation strict="false" explicit="true" targetFramework="4.5" debug="true"/>
-<!--    <identity impersonate="true" userName="JOTNT\pcadmin2" password="pad2" /> -->
-    <httpRuntime targetFramework="4.5" maxRequestLength="2097151"/>
-    <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master" />
+    <compilation strict="false" explicit="true" targetFramework="4.0" debug="true"/>
+    <!--    <identity impersonate="true" userName="JOTNT\pcadmin2" password="pad2" /> -->
+    <httpRuntime maxRequestLength="2097151"/>
+    <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master"/>
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
-      <error statusCode="403" redirect="~/OIL/ex/page_404.html" />
-      <error statusCode="404" redirect="~/OIL/ex/page_404.html" />
-      <error statusCode="510" redirect="~/OIL/ex/page_404.html" />
-      <error statusCode="500" redirect="~/OIL/ex/page_404.html" />
+      <error statusCode="403" redirect="~/OIL/ex/page_404.html"/>
+      <error statusCode="404" redirect="~/OIL/ex/page_404.html"/>
+      <error statusCode="510" redirect="~/OIL/ex/page_404.html"/>
+      <error statusCode="500" redirect="~/OIL/ex/page_404.html"/>
     </customErrors>
   </system.web>
   <system.webServer>
@@ -27,8 +27,8 @@
     </defaultDocument>
     <httpProtocol>
       <customHeaders>
-        <add name="Cache-Control" value="no-cache" />
-        <add name="Pragma" value="no-cache" />
+        <add name="Cache-Control" value="no-cache"/>
+        <add name="Pragma" value="no-cache"/>
       </customHeaders>
     </httpProtocol>
   </system.webServer>
