--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -100,6 +100,8 @@
     <Content Include="bin\JOTWEB.pdb" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\OIT0004C.css" />
+    <Content Include="OIL\css\OIT0004S.css" />
     <Content Include="OIL\css\OIS0001C.css" />
     <Content Include="OIL\css\OIS0001L.css" />
     <Content Include="OIL\css\OIS0001S.css" />
@@ -153,12 +155,14 @@
     <Content Include="inc\GRIS0004RightBox.ascx" />
     <Content Include="inc\GRIS0005LeftBox.ascx" />
     <Content Include="M00000LOGON.aspx" />
+    <Content Include="OIL\inc\OIT0004WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0003WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0002WRKINC.ascx" />
     <Content Include="OIL\inc\OIS0001WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0005WRKINC.ascx" />
     <Content Include="OIL\inc\OIM0004WRKINC.ascx" />
     <Content Include="OIL\inc\OIT0001WRKINC.ascx" />
+    <Content Include="OIL\inv\OIT0004OilStockSearch.aspx" />
     <Content Include="OIL\M00001MENU.aspx" />
     <Content Include="OIL\css\ex\nprogress.css" />
     <Content Include="OIL\ex\page_404.html" />
@@ -181,6 +185,8 @@
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\script\OIT0004C.js" />
+    <Content Include="OIL\script\OIT0004S.js" />
     <Content Include="OIL\script\OIS0001C.js" />
     <Content Include="OIL\script\OIS0001L.js" />
     <Content Include="OIL\script\OIS0001S.js" />
@@ -259,6 +265,13 @@
     <Compile Include="inc\GRCO0100XLSUP.ashx.vb">
       <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
     </Compile>
+    <Compile Include="OIL\inc\OIT0004WRKINC.ascx.designer.vb">
+      <DependentUpon>OIT0004WRKINC.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inc\OIT0004WRKINC.ascx.vb">
+      <DependentUpon>OIT0004WRKINC.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="OIL\inc\OIT0003WRKINC.ascx.designer.vb">
       <DependentUpon>OIT0003WRKINC.ascx</DependentUpon>
     </Compile>
@@ -300,6 +313,13 @@
     <Compile Include="OIL\inc\OIT0001WRKINC.ascx.vb">
       <DependentUpon>OIT0001WRKINC.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OIL\inv\OIT0004OilStockSearch.aspx.designer.vb">
+      <DependentUpon>OIT0004OilStockSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\inv\OIT0004OilStockSearch.aspx.vb">
+      <DependentUpon>OIT0004OilStockSearch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="OIL\mas\OIS0001UserCreate.aspx.designer.vb">
       <DependentUpon>OIS0001UserCreate.aspx</DependentUpon>
@@ -550,7 +570,6 @@
   <ItemGroup>
     <Folder Include="OIL\dat\" />
     <Folder Include="OIL\for\" />
-    <Folder Include="OIL\inv\" />
     <Folder Include="OIL\loc\" />
     <Folder Include="OIL\pay\" />
   </ItemGroup>
