--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -134,8 +134,10 @@
     <Content Include="img\最終頁.png" />
     <Content Include="img\矢印L.png" />
     <Content Include="img\矢印R.png" />
+    <Content Include="OIL\img\a_cat.png" />
     <Content Include="OIL\img\calendar.png" />
     <Content Include="OIL\img\datalink.png" />
+    <Content Include="OIL\img\e_cat.png" />
     <Content Include="OIL\img\iconError.png" />
     <Content Include="OIL\img\iconInfo.png" />
     <Content Include="OIL\img\iconWarn.png" />
@@ -148,6 +150,7 @@
     <Content Include="OIL\img\pay.png" />
     <Content Include="OIL\img\statistics.png" />
     <Content Include="OIL\img\tank.png" />
+    <Content Include="OIL\img\w_cat.png" />
     <Content Include="OIL\inc\GRM00002WRKINC.ascx" />
     <Content Include="OIL\inc\GRM00001WRKINC.ascx" />
     <Content Include="inc\GRIS0001Title.ascx" />
