--- a/JOTWEB/Web_bak.config
+++ b/JOTWEB/Web_bak.config
@@ -9,6 +9,7 @@
   </appSettings>
   <system.web>
     <compilation strict="false" explicit="true" targetFramework="4.0" debug="true"/>
+    <!--    <identity impersonate="true" userName="JOTNT\pcadmin2" password="pad2" /> -->
     <httpRuntime maxRequestLength="2097151"/>
     <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master"/>
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
