共通：ボタンフォントサイズ大きめに 在庫表：ローリー隠し（機能未実装）、在庫表のサイド共通部を縦並び、列車ロック（機能未実装） 在庫表検索：荷主項目追加（機能未実装）

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -142,6 +142,8 @@
     <Content Include="OIL\img\iconError.png" />
     <Content Include="OIL\img\iconInfo.png" />
     <Content Include="OIL\img\iconWarn.png" />
+    <Content Include="OIL\img\lockKey.png" />
+    <Content Include="OIL\img\lockKeyHover.png" />
     <Content Include="OIL\img\noicon.png" />
     <Content Include="OIL\img\foward.png" />
     <Content Include="OIL\img\leftbox.png" />
@@ -151,6 +153,8 @@
     <Content Include="OIL\img\pay.png" />
     <Content Include="OIL\img\statistics.png" />
     <Content Include="OIL\img\tank.png" />
+    <Content Include="OIL\img\unlockKey.png" />
+    <Content Include="OIL\img\unlockKeyHover.png" />
     <Content Include="OIL\img\w_cat.png" />
     <Content Include="OIL\inc\GRM00002WRKINC.ascx" />
     <Content Include="OIL\inc\GRM00001WRKINC.ascx" />
