--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -102,6 +102,7 @@
     <Content Include="img\oil.ico" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\OIT0003B.css" />
     <Content Include="OIL\css\OIT0004C.css" />
     <Content Include="OIL\css\OIT0004S.css" />
     <Content Include="OIL\css\OIS0001C.css" />
@@ -192,10 +193,12 @@
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyDetail.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairyList.aspx" />
     <Content Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx" />
+    <Content Include="OIL\ord\OIT0003OrderBusinessSearch.aspx" />
     <Content Include="OIL\ord\OIT0003OrderDetail.aspx" />
     <Content Include="OIL\ord\OIT0003OrderLinkQuota.aspx" />
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
+    <Content Include="OIL\script\OIT0003B.js" />
     <Content Include="OIL\script\OIT0004C.js" />
     <Content Include="OIL\script\OIT0004S.js" />
     <Content Include="OIL\script\OIS0001C.js" />
@@ -539,6 +542,13 @@
     <Compile Include="OIL\ord\OIT0001EmptyTurnDairySearch.aspx.vb">
       <DependentUpon>OIT0001EmptyTurnDairySearch.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderBusinessSearch.aspx.designer.vb">
+      <DependentUpon>OIT0003OrderBusinessSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\ord\OIT0003OrderBusinessSearch.aspx.vb">
+      <DependentUpon>OIT0003OrderBusinessSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="OIL\ord\OIT0003OrderDetail.aspx.designer.vb">
       <DependentUpon>OIT0003OrderDetail.aspx</DependentUpon>
