20200312_COMMIT  ＡＷＳ日本語表記対応　　WebConfig<system web>にローカリゼーションja-JP追加

--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -17,6 +17,7 @@
       <error statusCode="510" redirect="~/OIL/ex/page_404.html"/>
       <error statusCode="500" redirect="~/OIL/ex/page_404.html"/>
     </customErrors>
+    <globalization culture="ja-JP" uiCulture="ja-JP"/>
   </system.web>
   <system.webServer>
     <defaultDocument enabled="true">
