共通ポップアップメッセージ処理に、確認メッセージ表示処理追加

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -153,6 +153,7 @@
     <Content Include="OIL\img\oiltank.png" />
     <Content Include="OIL\img\order.png" />
     <Content Include="OIL\img\pay.png" />
+    <Content Include="OIL\img\q_cat.png" />
     <Content Include="OIL\img\richText.png" />
     <Content Include="OIL\img\statistics.png" />
     <Content Include="OIL\img\tank.png" />
