交検などの色付き●の設定を外だし、 画像対応可能の暫定版

--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -140,6 +140,7 @@
     <Content Include="img\矢印R.png" />
     <Content Include="OIL\img\a_cat.png" />
     <Content Include="OIL\img\calendar.png" />
+    <Content Include="OIL\img\caution.png" />
     <Content Include="OIL\img\datalink.png" />
     <Content Include="OIL\img\e_cat.png" />
     <Content Include="OIL\img\iconError.png" />
