--- a/JOTWEB/Web.config
+++ b/JOTWEB/Web.config
@@ -9,7 +9,7 @@
   </appSettings>
   <system.web>
     <compilation strict="false" explicit="true" targetFramework="4.0" debug="true"/>
-    <identity impersonate="true" userName="srvadmin1" password="sad123456789" />
+    <!--<identity impersonate="true" userName="srvadmin1" password="sad123456789" />-->
     <httpRuntime maxRequestLength="2097151"/>
     <pages clientIDMode="Static" masterPageFile="~/OIL/OILMasterPage.Master"/>
     <customErrors defaultRedirect="M00000LOGON.aspx" mode="Off">
