--- a/JOTWEB/JOTWEB.vbproj
+++ b/JOTWEB/JOTWEB.vbproj
@@ -103,6 +103,7 @@
     <Content Include="img\oillogo.png" />
     <Content Include="img\right.png" />
     <Content Include="img\tank2.png" />
+    <Content Include="OIL\css\OIT0006D.css" />
     <Content Include="OIL\css\OIT0006L.css" />
     <Content Include="OIL\css\OIT0005C.css" />
     <Content Include="OIL\css\OIT0003B.css" />
@@ -128,6 +129,7 @@
     <Content Include="OIL\css\OIM0004S.css" />
     <Content Include="OIL\css\OIT0002S.css" />
     <Content Include="OIL\css\OIT0006S.css" />
+    <Content Include="OIL\for\OIT0006OutOfServiceDetail.aspx" />
     <Content Include="OIL\for\OIT0006OutOfServiceList.aspx" />
     <Content Include="OIL\for\OIT0006OutOfServiceSearch.aspx" />
     <Content Include="OIL\css\OIT0005L.css" />
@@ -216,6 +218,7 @@
     <Content Include="OIL\ord\OIT0003OrderList.aspx" />
     <Content Include="OIL\ord\OIT0003OrderSearch.aspx" />
     <Content Include="OIL\script\OIT0003B.js" />
+    <Content Include="OIL\script\OIT0006D.js" />
     <Content Include="OIL\script\OIT0006L.js" />
     <Content Include="OIL\script\OIT0006S.js" />
     <Content Include="OIL\script\OIT0004C.js" />
@@ -302,6 +305,13 @@
       <DependentUpon>GRCO0100XLSUP.ashx</DependentUpon>
     </Compile>
     <Compile Include="OIL\com\EntryHistory.vb" />
+    <Compile Include="OIL\for\OIT0006OutOfServiceDetail.aspx.designer.vb">
+      <DependentUpon>OIT0006OutOfServiceDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OIL\for\OIT0006OutOfServiceDetail.aspx.vb">
+      <DependentUpon>OIT0006OutOfServiceDetail.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="OIL\for\OIT0006OutOfServiceList.aspx.designer.vb">
       <DependentUpon>OIT0006OutOfServiceList.aspx</DependentUpon>
     </Compile>
